--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        box-sizing: border-box;
+        margin: 0px;
+        padding: 0px;
+      }
+      .continer {
+        width: 100%;
+        height: 100hv;
+        display: flex;
+      }
+      #bgcolor {
+        width: 50%;
+        height: 400px;
+        border: 1 solid;
+        margin: auto;
+        padding: auto;
+        background-color: red;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="continer">
+      <div id="bgcolor"></div>
+    </div>
+    <script src="./index.js"></script>
+  </body>
 </html>
